@@ -3,18 +3,15 @@ package hci.gnomex.controller;
 import hci.framework.control.Command;
 import hci.framework.control.RollBackCommandException;
 import hci.gnomex.model.AnalysisType;
-import hci.gnomex.model.AppUserLite;
 import hci.gnomex.model.Application;
 import hci.gnomex.model.Organism;
 import hci.gnomex.model.Property;
-import hci.gnomex.model.PropertyDictionary;
 import hci.gnomex.model.PropertyOption;
 import hci.gnomex.model.PropertyPlatformApplication;
 import hci.gnomex.model.RequestCategory;
 import hci.gnomex.security.SecurityAdvisor;
 import hci.gnomex.utility.DictionaryHelper;
 import hci.gnomex.utility.HibernateSession;
-import hci.gnomex.utility.PropertyDictionaryHelper;
 
 import java.io.Serializable;
 import java.io.StringReader;
@@ -52,9 +49,6 @@ public class SaveProperty extends GNomExCommand implements Serializable {
   private String                         organismsXMLString;
   private Document                       organismsDoc;
   
-  private String                         appUsersXMLString;
-  private Document                       appUsersDoc;
-  
   private String                         platformsXMLString;
   private Document                       platformsDoc;
 
@@ -64,7 +58,6 @@ public class SaveProperty extends GNomExCommand implements Serializable {
   private Property                       propertyScreen;
   private boolean                        isNewProperty = false;
 
-  private String                         annotationPropertyEquivalents = null;
   
   public void validate() {
   }
@@ -78,7 +71,7 @@ public class SaveProperty extends GNomExCommand implements Serializable {
       isNewProperty = true;
     }
     
-    if (!propertyScreen.getForAnalysis().equals("Y") && !propertyScreen.getForDataTrack().equals("Y") && !propertyScreen.getForSample().equals("Y") && !propertyScreen.getForRequest().equals("Y")) {
+    if (!propertyScreen.getForAnalysis().equals("Y") && !propertyScreen.getForDataTrack().equals("Y") && !propertyScreen.getForSample().equals("Y")) {
       this.addInvalidField("AnnotationAppliesTo", "Please choose the object the annotation applies to");
     }
 
@@ -88,7 +81,6 @@ public class SaveProperty extends GNomExCommand implements Serializable {
       try {
         SAXBuilder sax = new SAXBuilder();
         optionsDoc = sax.build(reader);     
-        checkOptions();
       } catch (JDOMException je ) {
         log.error( "Cannot parse optionsXMLString", je );
         this.addInvalidField( "optionsXMLString", "Invalid optionsXMLString");
@@ -105,18 +97,6 @@ public class SaveProperty extends GNomExCommand implements Serializable {
       } catch (JDOMException je ) {
         log.error( "Cannot parse organismsXMLString", je );
         this.addInvalidField( "organismsXMLString", "Invalid organismsXMLString");
-      }
-    }
-    
-    if (request.getParameter("appUsersXMLString") != null && !request.getParameter("appUsersXMLString").equals("")) {
-      appUsersXMLString = request.getParameter("appUsersXMLString");
-      StringReader reader = new StringReader(appUsersXMLString);
-      try {
-        SAXBuilder sax = new SAXBuilder();
-        appUsersDoc = sax.build(reader);     
-      } catch (JDOMException je ) {
-        log.error( "Cannot parse appUsersXMLString", je );
-        this.addInvalidField( "appUsersXMLString", "Invalid appUsersXMLString");
       }
     }
     
@@ -146,62 +126,6 @@ public class SaveProperty extends GNomExCommand implements Serializable {
       
 
   }
-  
-  private void checkOptions() {
-    PropertyDictionaryHelper pdh = PropertyDictionaryHelper.getInstance(null);
-    this.annotationPropertyEquivalents = pdh.getProperty(PropertyDictionary.ANNOTATION_OPTION_EQUIVALENTS);
-    String annotationPropertyInvalid = pdh.getProperty(PropertyDictionary.ANNOTATION_OPTION_INVALID);
-    
-    HashMap<String, String> invalidMap = new HashMap<String, String>();
-    if (annotationPropertyInvalid != null) {
-      for (String i: annotationPropertyInvalid.split(",")) {
-        invalidMap.put(i.trim().toUpperCase(), i);
-      }
-    }
-    
-    HashMap<String, String> nameMap = new HashMap<String, String>();
-    for(Iterator i = this.optionsDoc.getRootElement().getChildren().iterator(); i.hasNext();) {
-      Element node = (Element)i.next();
-      
-      String name = node.getAttributeValue("option");
-      name = mapPropertyOptionEquivalents(name);
-      
-      if (invalidMap.containsKey(name.toUpperCase())) {
-        this.addInvalidField("Invalid Option", "The option '" + node.getAttributeValue("option") + "' is not allowed.");
-      }
-      
-      if (nameMap.containsKey(name.toUpperCase())) {
-        this.addInvalidField("Duplicate Option", "The options '" + node.getAttributeValue("option") + "' and '" + nameMap.get(name.toUpperCase()) + "' are duplicate.  Please correct and try again.");
-      }
-      nameMap.put(name.toUpperCase(), node.getAttributeValue("option"));
-    }
-  }
-  
-  private String mapPropertyOptionEquivalents(String option) {
-    if (option == null) {
-      return "";
-    }
-    option = option.trim();
-
-    String eq = this.annotationPropertyEquivalents;
-    if (eq == null || eq.trim().length() == 0) {
-      return option;
-    }
-    
-    String opts[] = eq.split(",");
-    if (opts.length < 2) {
-      return option;
-    }
-    
-    for(String opt : opts) {
-      opt = opt.trim();
-      if (opt.toUpperCase().equals(option.toUpperCase())) {
-        return opts[0].trim();
-      }
-    }
-    
-    return option;
-  }
 
   public Command execute() throws RollBackCommandException {
     
@@ -210,221 +134,200 @@ public class SaveProperty extends GNomExCommand implements Serializable {
       
       if (this.getSecurityAdvisor().hasPermission(SecurityAdvisor.CAN_SUBMIT_REQUESTS)) {
 
-        if (validatePropertyScreen(sess)&&checkPermissionToEdit(sess)) {
         
-          Property sc = null;
-                
-          if (isNewProperty) {
-            sc = propertyScreen;
-            
-            sess.save(sc);
-          } else {
-            
-            sc = (Property)sess.load(Property.class, propertyScreen.getIdProperty());
-            
-            // Need to initialize billing accounts; otherwise new accounts
-            // get in the list and get deleted.
-            Hibernate.initialize(sc.getOptions());
-            Hibernate.initialize(sc.getOrganisms());
-            Hibernate.initialize(sc.getAppUsers());
-            
-            initializeProperty(sc);
-          }
-  
-  
-          //
-          // Save options
-          //
-          HashMap optionMap = new HashMap();
-          if (optionsDoc != null && sc.hasOptions()) {
-            for(Iterator i = this.optionsDoc.getRootElement().getChildren().iterator(); i.hasNext();) {
-              Element node = (Element)i.next();
-              PropertyOption option =  null;
+        Property sc = null;
               
-              String idPropertyOption = node.getAttributeValue("idPropertyOption");
-              if (idPropertyOption.startsWith("PropertyOption")) {
-                option = new PropertyOption();
-              } else {
-                option = (PropertyOption) sess.load(PropertyOption.class, Integer.valueOf(idPropertyOption));
-              }
-              
-              String name = node.getAttributeValue("option");
-              name = mapPropertyOptionEquivalents(name);
-              
-              option.setOption(name);
-              option.setSortOrder(node.getAttributeValue("sortOrder") != null && !node.getAttributeValue("sortOrder").equals("") ? Integer.valueOf(node.getAttributeValue("sortOrder")) : null);
-              option.setIsActive(node.getAttributeValue("isActive"));
-              option.setIdProperty(sc.getIdProperty());
-  
-              sess.save(option);
-              sess.flush();
-              optionMap.put(option.getIdPropertyOption(), null);
-              
-            }
-          }
-  
-          // Remove options no longer in the list -- note if type does not allow options we remove all options.
-          List optionsToRemove = new ArrayList();
-          if (sc.getOptions() != null) {
-            for(Iterator i = sc.getOptions().iterator(); i.hasNext();) {
-              PropertyOption op = (PropertyOption)i.next();
-              
-              if (!sc.hasOptions() || !optionMap.containsKey(op.getIdPropertyOption())) {
-                optionsToRemove.add(op);
-              }
-            }
-            for(Iterator i = optionsToRemove.iterator(); i.hasNext();) {
-              PropertyOption op = (PropertyOption)i.next();
-              
-              Integer entryCount = new Integer(0);
-              String buf = "SELECT count(*) from PropertyEntry e JOIN e.options as eo where eo.idPropertyOption = " + op.getIdPropertyOption();
-              List entryCounts = sess.createQuery(buf).list();
-              if (entryCounts != null && entryCounts.size() > 0) {
-                entryCount = Integer.class.cast(entryCounts.get(0));
-              }
-              
-              // Inactive if there are existing property entries pointing to this option.
-              // If no existing entries, delete option.
-              if (entryCount.intValue() > 0) {
-                op.setIsActive("N");              
-              } else {
-                sess.delete(op);
-                sc.getOptions().remove(op);              
-              }
-            }
-          }
-          sess.flush();
+        if (isNewProperty) {
+          sc = propertyScreen;
           
-  
-          //
-          // Save property organisms
-          //
-          TreeSet organisms = new TreeSet(new OrganismComparator());
-          if (organismsDoc != null) {
-            for(Iterator i = this.organismsDoc.getRootElement().getChildren().iterator(); i.hasNext();) {
-              Element organismNode = (Element)i.next();
-              Organism organism = (Organism)sess.load(Organism.class, Integer.valueOf(organismNode.getAttributeValue("idOrganism")));
-              organisms.add(organism);
+          sess.save(sc);
+        } else {
+          
+          sc = (Property)sess.load(Property.class, propertyScreen.getIdProperty());
+          
+          // Need to initialize billing accounts; otherwise new accounts
+          // get in the list and get deleted.
+          Hibernate.initialize(sc.getOptions());
+          Hibernate.initialize(sc.getOrganisms());
+          
+          initializeProperty(sc);
+        }
+
+
+        //
+        // Save options
+        //
+        HashMap optionMap = new HashMap();
+        if (optionsDoc != null) {
+          for(Iterator i = this.optionsDoc.getRootElement().getChildren().iterator(); i.hasNext();) {
+            Element node = (Element)i.next();
+            PropertyOption option =  null;
+            
+            String idPropertyOption = node.getAttributeValue("idPropertyOption");
+            if (idPropertyOption.startsWith("PropertyOption")) {
+              option = new PropertyOption();
+            } else {
+              option = (PropertyOption) sess.load(PropertyOption.class, Integer.valueOf(idPropertyOption));
+            }
+            
+            option.setOption(node.getAttributeValue("option"));
+            option.setSortOrder(node.getAttributeValue("sortOrder") != null && !node.getAttributeValue("sortOrder").equals("") ? Integer.valueOf(node.getAttributeValue("sortOrder")) : null);
+            option.setIsActive(node.getAttributeValue("isActive"));
+            option.setIdProperty(sc.getIdProperty());
+
+            sess.save(option);
+            sess.flush();
+            optionMap.put(option.getIdPropertyOption(), null);
+            
+          }
+        }
+
+        // Remove options no longer in the list
+        List optionsToRemove = new ArrayList();
+        if (sc.getOptions() != null) {
+          for(Iterator i = sc.getOptions().iterator(); i.hasNext();) {
+            PropertyOption op = (PropertyOption)i.next();
+            
+            if (!optionMap.containsKey(op.getIdPropertyOption())) {
+              optionsToRemove.add(op);
             }
           }
-          sc.setOrganisms(organisms);
-          
-          //
-          // Save property users
-          //
-          TreeSet appUsers = new TreeSet(new AppUserComparator());
-          // Only have app users if property is for sample.
-          if (sc.getForSample() != null && sc.getForSample().equals("Y") && (sc.getIsRequired() == null || !sc.getIsRequired().equals("Y"))) {
-            if (appUsersDoc != null) {
-              for(Iterator i = this.appUsersDoc.getRootElement().getChildren().iterator(); i.hasNext();) {
-                Element appUserNode = (Element)i.next();
-                AppUserLite appUser = (AppUserLite)sess.load(AppUserLite.class, Integer.valueOf(appUserNode.getAttributeValue("idAppUser")));
-                appUsers.add(appUser);
-              }
+          for(Iterator i = optionsToRemove.iterator(); i.hasNext();) {
+            PropertyOption op = (PropertyOption)i.next();
+            
+            Integer entryCount = new Integer(0);
+            String buf = "SELECT count(*) from PropertyEntry e JOIN e.options as eo where eo.idPropertyOption = " + op.getIdPropertyOption();
+            List entryCounts = sess.createQuery(buf).list();
+            if (entryCounts != null && entryCounts.size() > 0) {
+              entryCount = Integer.class.cast(entryCounts.get(0));
+            }
+            
+            // Inactive if there are existing property entries pointing to this option.
+            // If no existing entries, delete option.
+            if (entryCount.intValue() > 0) {
+              op.setIsActive("N");              
+            } else {
+              sess.delete(op);
+              sc.getOptions().remove(op);              
             }
           }
-          sc.setAppUsers(appUsers);
-          
-  
-          //
-          // Save property platformApplications
-          //
-          TreeSet platformApplications = new TreeSet(new PlatformApplicationsComparator());
-          HashMap platformApplicationsMap = new HashMap();
-          if (platformsDoc != null) {
-            for(Iterator i = this.platformsDoc.getRootElement().getChildren().iterator(); i.hasNext();) {
-              Element platformNode = (Element)i.next();
-              
-              // See if this PropertyPlatformApplication object already exists
-              StringBuffer queryBuf = new StringBuffer("select pa");
-              queryBuf.append(" from PropertyPlatformApplication as pa");
-              queryBuf.append(" where pa.idProperty = " + sc.getIdProperty().toString() + " and");
-              queryBuf.append(" pa.codeRequestCategory = '" + platformNode.getAttributeValue("codeRequestCategory") + "' and");
-              queryBuf.append(" pa.codeApplication ");
+        }
+        sess.flush();
+        
+
+        //
+        // Save property organisms
+        //
+        TreeSet organisms = new TreeSet(new OrganismComparator());
+        if (organismsDoc != null) {
+          for(Iterator i = this.organismsDoc.getRootElement().getChildren().iterator(); i.hasNext();) {
+            Element organismNode = (Element)i.next();
+            Organism organism = (Organism)sess.load(Organism.class, Integer.valueOf(organismNode.getAttributeValue("idOrganism")));
+            organisms.add(organism);
+          }
+        }
+        sc.setOrganisms(organisms);
+        
+
+        //
+        // Save property platformApplications
+        //
+        TreeSet platformApplications = new TreeSet(new PlatformApplicationsComparator());
+        HashMap platformApplicationsMap = new HashMap();
+        if (platformsDoc != null) {
+          for(Iterator i = this.platformsDoc.getRootElement().getChildren().iterator(); i.hasNext();) {
+            Element platformNode = (Element)i.next();
+            
+            // See if this PropertyPlatformApplication object already exists
+            StringBuffer queryBuf = new StringBuffer("select pa");
+            queryBuf.append(" from PropertyPlatformApplication as pa");
+            queryBuf.append(" where pa.idProperty = " + sc.getIdProperty().toString() + " and");
+            queryBuf.append(" pa.codeRequestCategory = '" + platformNode.getAttributeValue("codeRequestCategory") + "' and");
+            queryBuf.append(" pa.codeApplication ");
+            if (platformNode.getAttributeValue("codeApplication").length() > 0) {
+              queryBuf.append("= '" + platformNode.getAttributeValue("codeApplication") + "'");
+            } else {
+              queryBuf.append("is null");
+            }  
+            
+            Query query = sess.createQuery(queryBuf.toString());
+            List paRows = (List)query.list();   
+            
+            PropertyPlatformApplication pa = null;
+            if (paRows.size() > 0) {
+              pa = (PropertyPlatformApplication) paRows.get(0);
+              platformApplicationsMap.put(pa.getIdPlatformApplication(), null);
+            } else {
+              pa = new PropertyPlatformApplication();
+              pa.setIdProperty(sc.getIdProperty());
+              pa.setCodeRequestCategory(platformNode.getAttributeValue("codeRequestCategory"));
               if (platformNode.getAttributeValue("codeApplication").length() > 0) {
-                queryBuf.append("= '" + platformNode.getAttributeValue("codeApplication") + "'");
+                pa.setCodeApplication(platformNode.getAttributeValue("codeApplication"));
               } else {
-                queryBuf.append("is null");
-              }  
-              
-              Query query = sess.createQuery(queryBuf.toString());
-              List paRows = (List)query.list();   
-              
-              PropertyPlatformApplication pa = null;
-              if (paRows.size() > 0) {
-                pa = (PropertyPlatformApplication) paRows.get(0);
-                platformApplicationsMap.put(pa.getIdPlatformApplication(), null);
-              } else {
-                pa = new PropertyPlatformApplication();
-                pa.setIdProperty(sc.getIdProperty());
-                pa.setCodeRequestCategory(platformNode.getAttributeValue("codeRequestCategory"));
-                if (platformNode.getAttributeValue("codeApplication").length() > 0) {
-                  pa.setCodeApplication(platformNode.getAttributeValue("codeApplication"));
-                } else {
-                  pa.setCodeApplication(null);
-                } 
-                sess.save(pa);
-                platformApplicationsMap.put(pa.getIdPlatformApplication(), null);
-                sess.flush();
-              }
-              // Reload to insure RequestCategory and Application objects are populated
-              Integer idPlatformApplication = pa.getIdPlatformApplication();
-              pa = (PropertyPlatformApplication)sess.load(PropertyPlatformApplication.class, idPlatformApplication); 
-             
-              RequestCategory rc = (RequestCategory)sess.load(RequestCategory.class, pa.getCodeRequestCategory()); 
-              pa.setRequestCategory(rc);
-              if(pa.getCodeApplication() != null) {
-                Application a = (Application)sess.load(Application.class, pa.getCodeApplication());
-                pa.setApplication(a);
-              }
-             
-              platformApplications.add(pa);
+                pa.setCodeApplication(null);
+              } 
+              sess.save(pa);
+              platformApplicationsMap.put(pa.getIdPlatformApplication(), null);
+              sess.flush();
             }
-          }    
-          
-          // Remove platformApplications no longer in the list
-          List platformApplicationsToRemove = new ArrayList();
-          if (sc.getPlatformApplications() != null) {
-            for(Iterator i = sc.getPlatformApplications().iterator(); i.hasNext();) {
-              PropertyPlatformApplication pa = (PropertyPlatformApplication) i.next();
-              
-              if (!platformApplicationsMap.containsKey(pa.getIdPlatformApplication())) {
-                platformApplicationsToRemove.add(pa);
-              }
+            // Reload to insure RequestCategory and Application objects are populated
+            Integer idPlatformApplication = pa.getIdPlatformApplication();
+            pa = (PropertyPlatformApplication)sess.load(PropertyPlatformApplication.class, idPlatformApplication); 
+           
+            RequestCategory rc = (RequestCategory)sess.load(RequestCategory.class, pa.getCodeRequestCategory()); 
+            pa.setRequestCategory(rc);
+            if(pa.getCodeApplication() != null) {
+              Application a = (Application)sess.load(Application.class, pa.getCodeApplication());
+              pa.setApplication(a);
             }
-            for(Iterator i = platformApplicationsToRemove.iterator(); i.hasNext();) {
-              PropertyPlatformApplication pa = (PropertyPlatformApplication)i.next();
-              sess.delete(pa);
-            }
+           
+            platformApplications.add(pa);
           }
-          sess.flush();         
-  
-          sc.setPlatformApplications(platformApplications);
-          
-          //
-          // Save property analysisTypes
-          //
-          TreeSet analysisTypes = new TreeSet(new AnalysisTypeComparator());
-          if (analysisTypesDoc != null) {
-            for(Iterator i = this.analysisTypesDoc.getRootElement().getChildren().iterator(); i.hasNext();) {
-              Element analysisTypeNode = (Element)i.next();
-              AnalysisType at = (AnalysisType)sess.load(AnalysisType.class, Integer.valueOf(analysisTypeNode.getAttributeValue("idAnalysisType")));
-              analysisTypes.add(at);
-            }
-          }
-          sc.setAnalysisTypes(analysisTypes);
-          sess.flush();
-  
-          DictionaryHelper.reload(sess);
-          
-          this.xmlResult = "<SUCCESS idProperty=\"" + sc.getIdProperty() + "\"/>";
+        }    
         
-          setResponsePage(this.SUCCESS_JSP);
-        }      
+        // Remove platformApplications no longer in the list
+        List platformApplicationsToRemove = new ArrayList();
+        if (sc.getPlatformApplications() != null) {
+          for(Iterator i = sc.getPlatformApplications().iterator(); i.hasNext();) {
+            PropertyPlatformApplication pa = (PropertyPlatformApplication) i.next();
+            
+            if (!platformApplicationsMap.containsKey(pa.getIdPlatformApplication())) {
+              platformApplicationsToRemove.add(pa);
+            }
+          }
+          for(Iterator i = platformApplicationsToRemove.iterator(); i.hasNext();) {
+            PropertyPlatformApplication pa = (PropertyPlatformApplication)i.next();
+            sess.delete(pa);
+          }
+        }
+        sess.flush();         
+
+        sc.setPlatformApplications(platformApplications);
+        
+        //
+        // Save property analysisTypes
+        //
+        TreeSet analysisTypes = new TreeSet(new AnalysisTypeComparator());
+        if (analysisTypesDoc != null) {
+          for(Iterator i = this.analysisTypesDoc.getRootElement().getChildren().iterator(); i.hasNext();) {
+            Element analysisTypeNode = (Element)i.next();
+            AnalysisType at = (AnalysisType)sess.load(AnalysisType.class, Integer.valueOf(analysisTypeNode.getAttributeValue("idAnalysisType")));
+            analysisTypes.add(at);
+          }
+        }
+        sc.setAnalysisTypes(analysisTypes);
+        sess.flush();
+
+        DictionaryHelper.reload(sess);
+        
+        this.xmlResult = "<SUCCESS idProperty=\"" + sc.getIdProperty() + "\"/>";
+      
+        setResponsePage(this.SUCCESS_JSP);
       } else {
         this.addInvalidField("Insufficient permissions", "Insufficient permission to save sample property.");
         setResponsePage(this.ERROR_JSP);
       }
+      
     }catch (Exception e){
       log.error("An exception has occurred in SaveProperty ", e);
       e.printStackTrace();
@@ -441,46 +344,6 @@ public class SaveProperty extends GNomExCommand implements Serializable {
     return this;
   }
   
-  private Boolean validatePropertyScreen(Session sess) {
-    if (propertyScreen.getIdCoreFacility() == null) {
-      this.addInvalidField("No Core", propertyScreen.getName() + " does not have a core facility specified.  Please specify a core facility.");
-      setResponsePage(this.ERROR_JSP);
-      return false;
-    }
-    
-    String queryString = "select p from Property p where name = :name";
-    Query query = sess.createQuery(queryString);
-    query.setParameter("name", propertyScreen.getName());
-    @SuppressWarnings("unchecked")
-    List<Property> l = (List<Property>)query.list();
-    for(Property p : l) {
-      // don't want to compare against itself.
-      if (p.getIdProperty().equals(propertyScreen.getIdProperty())) {
-        continue;
-      }
-      // note that idCorefacility should never be null, but the check makes this more robust.
-      if (p.getIdCoreFacility() == null || p.getIdCoreFacility().equals(propertyScreen.getIdCoreFacility())) {
-        this.addInvalidField("Duplicate Name", propertyScreen.getName() + " has been used as the name for a previously defined annotation.  Please choose another name.");
-        setResponsePage(this.ERROR_JSP);
-        return false;
-      }
-    }
-    
-    return true;
-  }
-
-  private Boolean checkPermissionToEdit(Session sess) {
-    if (propertyScreen.getForRequest()!=null && propertyScreen.getForRequest().equals( "Y" )) {
-      if (!this.getSecurityAdvisor().hasPermission(SecurityAdvisor.CAN_ACCESS_ANY_OBJECT) ) {  
-        this.addInvalidField("Insufficient permissions", "Non-admins cannot edit annotations for experiment requests.");
-        setResponsePage(this.ERROR_JSP);
-        return false;
-      }
-    }
-
-    return true;
-  }
-
   private void initializeProperty(Property prop) {
     prop.setName(propertyScreen.getName());
     prop.setMageOntologyCode(propertyScreen.getMageOntologyCode());
@@ -489,13 +352,10 @@ public class SaveProperty extends GNomExCommand implements Serializable {
     prop.setForSample(propertyScreen.getForSample());
     prop.setForDataTrack(propertyScreen.getForDataTrack());
     prop.setForAnalysis(propertyScreen.getForAnalysis());
-    prop.setForRequest(propertyScreen.getForRequest());
     prop.setIsRequired(propertyScreen.getIsRequired());
-    prop.setSortOrder(propertyScreen.getSortOrder());
     prop.setCodePropertyType(propertyScreen.getCodePropertyType());
     prop.setIdAppUser(propertyScreen.getIdAppUser());
     prop.setDescription(propertyScreen.getDescription());
-    prop.setIdCoreFacility(propertyScreen.getIdCoreFacility());
   }
   
   
@@ -508,17 +368,6 @@ public class SaveProperty extends GNomExCommand implements Serializable {
       
     }
   }
-  
-  private class AppUserComparator implements Comparator, Serializable {
-    public int compare(Object o1, Object o2) {
-      AppUserLite org1 = (AppUserLite)o1;
-      AppUserLite org2 = (AppUserLite)o2;
-      
-      return org1.getIdAppUser().compareTo(org2.getIdAppUser());
-      
-    }
-  }
-
   private class PlatformApplicationsComparator implements Comparator, Serializable {
     public int compare(Object o1, Object o2) {
       PropertyPlatformApplication pa1 = (PropertyPlatformApplication)o1;
